301_Motor_controller/Design_301_project.cydsn/BUILD.log
--------------- Build Started: 09/17/2023 22:16:58 Project: Design_301_project, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\18285\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\18285\Desktop\301\Project\301_Motor_controller\Design_301_project.cydsn\Design_301_project.cyprj -d CY8C5888LTI-LP097 -s C:\Users\18285\Desktop\301\Project\301_Motor_controller\Design_301_project.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 17 pin(s) will be assigned a location by the fitter: \USBUART:Dm(0)\, \USBUART:Dp(0)\, DB0(0), DB1(0), DB2(0), LED(0), M1_C1(0), M1_IN1(0), M1_IN2(0), M2_C1(0), M2_D1(0), M2_IN1(0), M2_IN2(0), M2_QA(0), Rx_1(0), Rx_2(0), Tx_1(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from Generated_Source\PSoC5/M1_D1.h:22:0,
                 from Generated_Source\PSoC5/project.h:24,
                 from main.c:22:
main.c: In function 'detect_position':
main.c:184:24: error: 'vo1' undeclared (first use in this function)
     if (CyPins_ReadPin(vo1) )
                        ^
Generated_Source\PSoC5/cypins.h:90:46: note: in definition of macro 'CyPins_ReadPin'
 #define CyPins_ReadPin(pinPC)    ( *(reg8 *)(pinPC) & CY_PINS_PC_PIN_STATE )
                                              ^
main.c:184:24: note: each undeclared identifier is reported only once for each function it appears in
     if (CyPins_ReadPin(vo1) )
                        ^
Generated_Source\PSoC5/cypins.h:90:46: note: in definition of macro 'CyPins_ReadPin'
 #define CyPins_ReadPin(pinPC)    ( *(reg8 *)(pinPC) & CY_PINS_PC_PIN_STATE )
                                              ^
main.c:186:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/17/2023 22:17:25 ---------------
